--- a/scss/_basic.scss
+++ b/scss/_basic.scss
@@ -6,6 +6,9 @@
 html, body {
     height: 100%;
     min-height: 100%;
+    @include media-ie {
+        overflow-x: hidden;
+    }
 }
 
 
@@ -110,17 +113,17 @@ p, span, li, input, textarea, label {
 .inner {
     @include push--auto;
     @include media-md {
-        min-width: 590px;
+        min-width: 570px;
         max-width: 800px;
     }
     @include media-lg {
-        min-width: 800px;
+        min-width: 780px;
     }
     @include media-xl {
-        min-width: 1020px;
+        min-width: 1000px;
     }
     @include media-xxl {
-        max-width: 1200px;
+        max-width: 1180px;
     }
 }
 
